<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#787580"
    tools:context=".AboutFragment">

    <TextView
        android:id="@+id/about_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFDEE3"
        android:gravity="center"
        android:paddingTop="40dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/info"
        app:layout_constraintBottom_toBottomOf="@+id/about_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/about_the_app"
        android:textColor="@color/accent_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/content1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_textView"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/content1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/gudea"
        android:text="@string/about_app"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/subtitle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle1" />

    <TextView
        android:id="@+id/subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/how_does_my_pet_work"
        android:textColor="@color/accent_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/content2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content1" />

    <TextView
        android:id="@+id/content2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/gudea"
        android:text="@string/your_pet_s_health_is_determined_by_its_status_bars"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/subtitle3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle2" />

    <TextView
        android:id="@+id/subtitle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/what_can_i_do"
        android:textColor="@color/accent_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/content3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content2" />

    <TextView
        android:id="@+id/content3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/gudea"
        android:text="@string/what_to_do"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle3" />

    <TextView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/circular_shape"
        android:backgroundTint="#FFE7EB"
        android:fontFamily="@font/fredoka_one"
        android:paddingStart="15dp"
        android:paddingTop="8dp"
        android:paddingEnd="15dp"
        android:paddingBottom="8dp"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="#787580"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>