<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#55535C"
    tools:context=".SignUpFragment">


    <ImageView
        android:id="@+id/first_imageView"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/first_step"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/paw_imageView2"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/paw"
        app:layout_constraintBottom_toBottomOf="@+id/signUp_textView"
        app:layout_constraintStart_toEndOf="@+id/signUp_textView"
        app:layout_constraintTop_toTopOf="@+id/signUp_textView" />

    <TextView
        android:id="@+id/signUp_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/welcome"
        android:textColor="#D6D3D5"
        android:textSize="46sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_imageView" />

    <TextView
        android:id="@+id/subtext_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/make_your_personal_account"
        android:textColor="#BABABA"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/signUp_textView"
        app:layout_constraintTop_toBottomOf="@+id/signUp_textView" />

    <EditText
        android:id="@+id/makeUsername_editText"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/orange_selector"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingStart="55dp"
        android:textColor="#FFE0D2"
        android:textColorHint="#ACACAC"
        android:textColorLink="#FFE0D2"
        android:textCursorDrawable="@null"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/makePassword_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtext_textView2"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/user_imageView"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="5dp"
        android:src="@drawable/user"
        app:layout_constraintBottom_toBottomOf="@+id/makeUsername_editText"
        app:layout_constraintStart_toStartOf="@+id/makeUsername_editText"
        app:layout_constraintTop_toTopOf="@+id/makeUsername_editText"
        app:layout_constraintVertical_bias="0.44"
        app:srcCompat="@drawable/user" />

    <EditText
        android:id="@+id/makePassword_editText"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/peach_selector"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="55dp"
        android:textColor="#FFD2D2"
        android:textColorHint="#939393"
        android:textCursorDrawable="@null"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/confirmPassword_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/makeUsername_editText" />

    <ImageView
        android:id="@+id/lock1_imageView"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="2dp"
        android:src="@drawable/lock"
        app:layout_constraintBottom_toBottomOf="@+id/makePassword_editText"
        app:layout_constraintStart_toStartOf="@+id/makePassword_editText"
        app:layout_constraintTop_toTopOf="@+id/makePassword_editText"
        app:srcCompat="@drawable/lock" />

    <EditText
        android:id="@+id/confirmPassword_editText"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/pink_selector"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="55dp"
        android:textColor="@color/accent_color"
        android:textColorHint="#939393"
        android:textCursorDrawable="@null"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/acceptTerms_checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/makePassword_editText" />

    <ImageView
        android:id="@+id/lock2_imageView"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="2dp"
        android:src="@drawable/lock"
        app:layout_constraintBottom_toBottomOf="@+id/confirmPassword_editText"
        app:layout_constraintStart_toStartOf="@+id/confirmPassword_editText"
        app:layout_constraintTop_toTopOf="@+id/confirmPassword_editText"
        app:srcCompat="@drawable/lock" />

    <CheckBox
        android:id="@+id/acceptTerms_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="40dp"
        android:checked="false"
        android:text="@string/i_accept_the"
        android:textColor="#D6D6D6"
        android:textCursorDrawable="@null"
        android:textSize="12sp"
        android:theme="@style/Check"
        app:layout_constraintBottom_toTopOf="@+id/signUp_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword_editText" />

    <TextView
        android:id="@+id/terms_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/terms_of_use_and_privacy_policy"
        android:textColor="@color/accent_color"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/acceptTerms_checkBox"
        app:layout_constraintStart_toEndOf="@+id/acceptTerms_checkBox"
        app:layout_constraintTop_toTopOf="@+id/acceptTerms_checkBox" />

    <TextView
        android:id="@+id/signUpError_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:textColor="@color/error_red"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acceptTerms_checkBox" />

    <Button
        android:id="@+id/signUp_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:background="@drawable/view_gradient"
        android:paddingHorizontal="50dp"
        android:paddingVertical="12dp"
        android:text="@string/sign_up"
        android:theme="@style/ButtonTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signupBack_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/gudea"
        android:text="@string/back"
        android:textColor="#DDD6D9"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/signupBack_imageView"
        app:layout_constraintEnd_toEndOf="@+id/signUp_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/signupBack_imageView"
        app:layout_constraintTop_toTopOf="@+id/signupBack_imageView" />

    <ImageView
        android:id="@+id/signupBack_imageView"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/start"
        app:layout_constraintEnd_toStartOf="@+id/signupBack_textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/signUp_button"
        app:layout_constraintTop_toBottomOf="@+id/signUp_button" />

</androidx.constraintlayout.widget.ConstraintLayout>