<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_square_corners"
    android:backgroundTint="#FFFFFF">

    <TextView
        android:id="@+id/topPink_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/top_square_corners"
        android:backgroundTint="#FFD4DA"
        android:fontFamily="@font/fredoka_one"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/topPink_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topPink_textView"
        app:srcCompat="@drawable/sign_out" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/are_you_sure_you_want_to_sign_out"
        android:textColor="#1C1C1C"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topPink_textView" />

    <TextView
        android:id="@+id/yes_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/yes"
        android:textColor="#F191AC"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading" />

    <TextView
        android:id="@+id/no_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/no"
        android:textColor="#BCB4B7"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/yes_textView"
        app:layout_constraintEnd_toStartOf="@+id/yes_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>