<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bottom_square_corners"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:backgroundTint="#FFFFFF">

    <TextView
        android:id="@+id/pink_textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/top_square_corners"
        android:backgroundTint="#FFD9DF"
        android:fontFamily="@font/fredoka_one"
        android:paddingTop="30dp"
        android:paddingBottom="20dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/pink_textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chat" />

    <EditText
        android:id="@+id/reply_editText"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/dialog_selector"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/write_a_reply"
        android:inputType="textPersonName"
        android:textColorLink="#FFD9DF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pink_textView2" />

    <TextView
        android:id="@+id/cancelReply_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/cancel"
        android:textColor="#AAAAAA"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sendReply_textView"
        app:layout_constraintTop_toBottomOf="@+id/reply_editText" />

    <TextView
        android:id="@+id/sendReply_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/send"
        android:textColor="#FFB0BC"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reply_editText" />
</androidx.constraintlayout.widget.ConstraintLayout>